Closed
Bug 1872767
Opened 2 years ago
Closed 2 years ago
Startup terminal-spew "ERROR firefox_on_glean::private::string] Unable to set string metric in non-main process. Ignoring."
Categories
(Core :: Graphics, defect, P2)
Core
Graphics
Tracking
()
RESOLVED
FIXED
123 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | --- | unaffected |
| firefox123 | --- | fixed |
People
(Reporter: dholbert, Assigned: nical)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Start Firefox Nightly from the terminal.
- Watch your terminal output.
ACTUAL RESULTS:
This appears within the first few seconds of running:
[ERROR firefox_on_glean::private::string] Unable to set string metric in non-main process. Ignoring.
[ERROR firefox_on_glean::private::string] Unable to set string metric in non-main process. Ignoring.
[ERROR firefox_on_glean::private::string] Unable to set string metric in non-main process. Ignoring.
[ERROR firefox_on_glean::private::string] Unable to set string metric in non-main process. Ignoring.
[ERROR firefox_on_glean::private::string] Unable to set string metric in non-main process. Ignoring.
EXPECTED RESULTS:
No such terminal output.
mozregression yields this pushlog:
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5e551f2bacc3d6a8294dcb0273e8299cf7a17e2d&tochange=bc706579ad2b44cdcaefe81a4b7c14b0dd535a09
which points to bug 1870021 as the culprit. (Makes sense, since that added some glean probes.)
jnicol, can you tweak things such that we don't spam this output? Maybe we need a XRE_IsParentProcess() check or something along those lines?
Flags: needinfo?(jnicol)
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1870021
status-firefox121:
--- → unaffected
status-firefox122:
--- → unaffected
status-firefox123:
--- → affected
status-firefox-esr115:
--- → unaffected
Comment 2•2 years ago
|
||
Nical, since Jamie is on parental leave this month, is this something you think you could look at?
Severity: -- → S3
Flags: needinfo?(nical.bugzilla)
Priority: -- → P2
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → nical.bugzilla
Flags: needinfo?(nical.bugzilla)
Flags: needinfo?(jnicol)
| Assignee | ||
Comment 3•2 years ago
|
||
Pushed by nsilva@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3f6550f8444c
Avoid touching gpu process glean probes outside of the main process. r=gfx-reviewers,aosmond
Comment 5•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•