Bug 1872767 - Avoid touching gpu process glean probes outside of the main process. r=gfx-reviewers,aosmond

Differential Revision: https://phabricator.services.mozilla.com/D197676